Fix overflowing elements
Make each row individually overflow with scroll bars. This fixes a whole
page overflow when any element is too large.

https://github.com/TheBiggerGuy/com.chelsislotten.www/issues/72

--- a/site/assets/scss/main.scss
+++ b/site/assets/scss/main.scss
@@ -87,6 +87,10 @@ a {
   @include enable-word-break;
 }
 
+.row {
+  overflow-x: scroll;
+}
+
 
 /* NAVBAR
 -------------------------------------------------- */
